Add a utils class CompositeEmueration.